# Docker

compose/backend_code/: Dockerfile  compose.yaml  pyproject.toml
compose/backend_code/backend_code/: main.py
compose_db/: .txt
compose_db/todoapp/: Dockerfile  compose.yaml  pyproject.toml
compose_db/todoapp/todo_app/: main.py
containerization/backend_code/backend_code/: main.py
dev container/backend_code/: pyproject.toml
dev container/backend_code/backend_code/: main.py
