[tool.poetry]
name = "backend-code"
version = "0.1.0"
description = ""
authors = ["Muhammad Talha <talhajoiyamuhammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
