[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Muhammad Talha <talhajoiyamuhammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
psycopg2 = "^2.9.9"
app = "^0.0.1"
psycopg = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
